# scout-mcp-local

./: .gitignore  Dockerfile  LICENSE  README.md  bump_versions.py  glama.json  inspector.py  lefthook.yml  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  docker.yml  npm-publish.yml  wizard-test.yml
app/: scout_api.py  server.py
scout_mcp/: main.py  scout_api.py  server.py
scout_mcp/config_resources/: bottle.md  celery.md  dash.md  django.md  dramatiq.md  falcon.md  fastapi.md  flask.md  huey.md  hug.md  rails.md  rq.md  sqlalchemy.md  starlette.md
scout_mcp/config_templates/: fastapi.md
setup-wizard/: package.json  tsconfig.build.json  vite.config.ts
setup-wizard/src/lib/: setup.ts
tests/app/: test_scout_api.py  test_server.py
tests/scout_mcp/: test_scout_api.py  test_server.py
wizard/: README.md  bin.ts  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
wizard/src/lib/: setup.ts
wizard/src/lib/mcp/: mcp.ts
wizard/src/lib/rails/: setup.ts
wizard/src/lib/templates/: scout_apm.yml.template
wizard/src/lib/uat/: authenticate.ts
wizard/src/lib/utils/: clack.ts  execAsync.ts  shared.ts
wizard/tests/: authenticateWithUat.spec.ts  helper.ts  setup.ts
wizard/tests/integration/: setup.spec.ts
wizard/tests/unit/: authenticateWithUat.spec.ts
wizard/tests/unit/rails/: setup.spec.ts
wizard/tests/unit/uat/: authenticate.spec.ts
