[project]
name = "scout-mcp-local"
maintainers = [
  {name = "Scout Monitoring", email = "support@scoutapm.com"}
]
version = "2025.10.30"
description = "A local MCP for Scout Monitoring data interactions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
]

[project.scripts]
scout-mcp-local = "scout_mcp.main:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "taskipy>=1.14.1",
]

# Need to specify due to wizard dir/monorepo
[tool.setuptools]
packages = ["scout_mcp"]

[tool.uv]
package = true

[tool.taskipy.settings]
dotenv = [".env"]

[tool.taskipy.tasks]
dev = { cmd = "dotenv run mcp dev inspector.py", help = "runs the local MCP server" }
test = { cmd = "python -m pytest --cov=scout_mcp --cov-report=html:coverage-html tests", help = "runs all unit tests" }
mypy = { cmd = "mypy . --install-types --non-interactive --ignore-missing-imports", help = "Mypy" }
flake8 = { cmd = "flake8 .", help = "confirms code style using flake8" }
isort = { cmd = "isort --profile=black .", help = "Run isort" }
black = { cmd = "black .", help = "Run black formatter" }
format = { cmd = "task black && task isort", help = "Autofix formatting and import issues" }
djlint = { cmd = "djlint . --extension html --reformat", help = "Run djlint on templates" }
lint = { cmd = "task flake8 && task mypy && task isort", help = "Run all linters" }
check = { cmd = "task flake8 && task mypy && task isort && task test", help = "Run all checks" }
